// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard Researcher IDs test Render the authors Researcher IDs as expected for a UQ researcher 1`] = `
<Fragment>
  <ExternalLink
    href="http://guides.library.uq.edu.au/for-researchers/researcher-identifier/publons"
    id="publons"
    openInNewIcon={false}
  >
    <WithStyles(ForwardRef(Tooltip))
      title="You are not linked to Publons - Click for more information"
    >
      <div
        className="fez-icon publons error"
        style={
          Object {
            "borderRadius": 32,
            "height": 32,
            "width": 32,
          }
        }
      />
    </WithStyles(ForwardRef(Tooltip))>
  </ExternalLink>
</Fragment>
`;

exports[`Dashboard Researcher IDs test Render the authors Researcher IDs as expected for a UQ researcher 2`] = `
<Fragment>
  <ExternalLink
    href="http://www.researcherid.com/rid/A-1137-2007"
    id="researcher"
    openInNewIcon={false}
  >
    <WithStyles(ForwardRef(Tooltip))
      title="Your Researcher (ISI) ID is A-1137-2007 - Click to review"
    >
      <div
        className="fez-icon researcher ok"
        style={
          Object {
            "borderRadius": 32,
            "height": 32,
            "width": 32,
          }
        }
      />
    </WithStyles(ForwardRef(Tooltip))>
  </ExternalLink>
</Fragment>
`;

exports[`Dashboard Researcher IDs test Render the authors Researcher IDs as expected for a UQ researcher 3`] = `
<Fragment>
  <ExternalLink
    href="http://www.scopus.com/authid/detail.url?authorId=35478294000"
    id="scopus"
    openInNewIcon={false}
  >
    <WithStyles(ForwardRef(Tooltip))
      title="Your Scopus ID is 35478294000 - Click to review"
    >
      <div
        className="fez-icon scopus error"
        style={
          Object {
            "borderRadius": 32,
            "height": 32,
            "width": 32,
          }
        }
      />
    </WithStyles(ForwardRef(Tooltip))>
  </ExternalLink>
</Fragment>
`;

exports[`Dashboard Researcher IDs test Render the authors Researcher IDs as expected for a UQ researcher 4`] = `
<Fragment>
  <ExternalLink
    href="https://scholar.google.com.au/citations?user=kUemDfMAAAAJ"
    id="google_scholar"
    openInNewIcon={false}
  >
    <WithStyles(ForwardRef(Tooltip))
      title="Your Google Scholar ID is kUemDfMAAAAJ - Click to review"
    >
      <div
        className="fez-icon google_scholar error"
        style={
          Object {
            "borderRadius": 32,
            "height": 32,
            "width": 32,
          }
        }
      />
    </WithStyles(ForwardRef(Tooltip))>
  </ExternalLink>
</Fragment>
`;

exports[`Dashboard Researcher IDs test Render the authors Researcher IDs as expected for a UQ researcher 5`] = `
<Fragment>
  <ExternalLink
    href="https://orcid.org/0000-0001-1111-1111"
    id="orcid"
    openInNewIcon={false}
  >
    <WithStyles(ForwardRef(Tooltip))
      title="Your ORCID ID is 0000-0001-1111-1111 - Click to review"
    >
      <div
        className="fez-icon orcid ok"
        style={
          Object {
            "borderRadius": 32,
            "height": 32,
            "width": 32,
          }
        }
      />
    </WithStyles(ForwardRef(Tooltip))>
  </ExternalLink>
</Fragment>
`;

exports[`Dashboard Researcher IDs test Testing auth internal links 1`] = `
<Fragment>
  <ExternalLink
    href="http://guides.library.uq.edu.au/for-researchers/researcher-identifier/publons"
    id="publons"
    openInNewIcon={false}
  >
    <WithStyles(ForwardRef(Tooltip))
      title="You are not linked to Publons - Click for more information"
    >
      <div
        className="fez-icon publons error"
        style={
          Object {
            "borderRadius": 32,
            "height": 32,
            "width": 32,
          }
        }
      />
    </WithStyles(ForwardRef(Tooltip))>
  </ExternalLink>
</Fragment>
`;

exports[`Dashboard Researcher IDs test Testing auth internal links 2`] = `
<Fragment>
  <ExternalLink
    href="http://www.researcherid.com/rid/A-1137-2007"
    id="researcher"
    openInNewIcon={false}
  >
    <WithStyles(ForwardRef(Tooltip))
      title="Your Researcher (ISI) ID is A-1137-2007 - Click to review"
    >
      <div
        className="fez-icon researcher ok"
        style={
          Object {
            "borderRadius": 32,
            "height": 32,
            "width": 32,
          }
        }
      />
    </WithStyles(ForwardRef(Tooltip))>
  </ExternalLink>
</Fragment>
`;

exports[`Dashboard Researcher IDs test Testing auth internal links 3`] = `
<Fragment>
  <ExternalLink
    href="http://www.scopus.com/authid/detail.url?authorId=35478294000"
    id="scopus"
    openInNewIcon={false}
  >
    <WithStyles(ForwardRef(Tooltip))
      title="Your Scopus ID is 35478294000 - Click to review"
    >
      <div
        className="fez-icon scopus ok"
        style={
          Object {
            "borderRadius": 32,
            "height": 32,
            "width": 32,
          }
        }
      />
    </WithStyles(ForwardRef(Tooltip))>
  </ExternalLink>
</Fragment>
`;

exports[`Dashboard Researcher IDs test Testing auth internal links 4`] = `
<Fragment>
  <ExternalLink
    href="https://scholar.google.com.au/citations?user=kUemDfMAAAAJ"
    id="google_scholar"
    openInNewIcon={false}
  >
    <WithStyles(ForwardRef(Tooltip))
      title="Your Google Scholar ID is kUemDfMAAAAJ - Click to review"
    >
      <div
        className="fez-icon google_scholar ok"
        style={
          Object {
            "borderRadius": 32,
            "height": 32,
            "width": 32,
          }
        }
      />
    </WithStyles(ForwardRef(Tooltip))>
  </ExternalLink>
</Fragment>
`;

exports[`Dashboard Researcher IDs test Testing auth internal links 5`] = `""`;

exports[`Dashboard Researcher IDs test Testing auth internal links 6`] = `
<a
  id="orcid"
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex="0"
  title="You are not linked to ORCID - Click for more information"
>
  <div
    className="fez-icon orcid dashboard ok"
    title="You are not linked to ORCID - Click for more information"
  />
</a>
`;

exports[`Dashboard Researcher IDs test Testing orcid caption 1`] = `
<Fragment>
  <ExternalLink
    href="http://guides.library.uq.edu.au/for-researchers/researcher-identifier/publons"
    id="publons"
    openInNewIcon={false}
  >
    <WithStyles(ForwardRef(Tooltip))
      title="You are not linked to Publons - Click for more information"
    >
      <div
        className="fez-icon publons error"
        style={
          Object {
            "borderRadius": 32,
            "height": 32,
            "width": 32,
          }
        }
      />
    </WithStyles(ForwardRef(Tooltip))>
  </ExternalLink>
</Fragment>
`;

exports[`Dashboard Researcher IDs test Testing orcid caption 2`] = `
<Fragment>
  <ExternalLink
    href="http://www.researcherid.com/rid/A-1137-2007"
    id="researcher"
    openInNewIcon={false}
  >
    <WithStyles(ForwardRef(Tooltip))
      title="Your Researcher (ISI) ID is A-1137-2007 - Click to review"
    >
      <div
        className="fez-icon researcher ok"
        style={
          Object {
            "borderRadius": 32,
            "height": 32,
            "width": 32,
          }
        }
      />
    </WithStyles(ForwardRef(Tooltip))>
  </ExternalLink>
</Fragment>
`;

exports[`Dashboard Researcher IDs test Testing orcid caption 3`] = `
<Fragment>
  <ExternalLink
    href="http://www.scopus.com/authid/detail.url?authorId=35478294000"
    id="scopus"
    openInNewIcon={false}
  >
    <WithStyles(ForwardRef(Tooltip))
      title="Your Scopus ID is 35478294000 - Click to review"
    >
      <div
        className="fez-icon scopus ok"
        style={
          Object {
            "borderRadius": 32,
            "height": 32,
            "width": 32,
          }
        }
      />
    </WithStyles(ForwardRef(Tooltip))>
  </ExternalLink>
</Fragment>
`;

exports[`Dashboard Researcher IDs test Testing orcid caption 4`] = `
<Fragment>
  <ExternalLink
    href="https://scholar.google.com.au/citations?user=kUemDfMAAAAJ"
    id="google_scholar"
    openInNewIcon={false}
  >
    <WithStyles(ForwardRef(Tooltip))
      title="Your Google Scholar ID is kUemDfMAAAAJ - Click to review"
    >
      <div
        className="fez-icon google_scholar ok"
        style={
          Object {
            "borderRadius": 32,
            "height": 32,
            "width": 32,
          }
        }
      />
    </WithStyles(ForwardRef(Tooltip))>
  </ExternalLink>
</Fragment>
`;

exports[`Dashboard Researcher IDs test Testing orcid caption 5`] = `
<Fragment>
  <ExternalLink
    href="https://orcid.org/0000-0001-1111-1111"
    id="orcid"
    openInNewIcon={false}
  >
    <WithStyles(ForwardRef(Tooltip))
      title="Your ORCID ID is 0000-0001-1111-1111 - Click to review"
    >
      <div
        className="fez-icon orcid ok"
        style={
          Object {
            "borderRadius": 32,
            "height": 32,
            "width": 32,
          }
        }
      />
    </WithStyles(ForwardRef(Tooltip))>
  </ExternalLink>
</Fragment>
`;

exports[`Dashboard Researcher IDs test Testing unauth internal links 1`] = `
<Fragment>
  <ExternalLink
    href="http://guides.library.uq.edu.au/for-researchers/researcher-identifier/publons"
    id="publons"
    openInNewIcon={false}
  >
    <WithStyles(ForwardRef(Tooltip))
      title="You are not linked to Publons - Click for more information"
    >
      <div
        className="fez-icon publons error"
        style={
          Object {
            "borderRadius": 32,
            "height": 32,
            "width": 32,
          }
        }
      />
    </WithStyles(ForwardRef(Tooltip))>
  </ExternalLink>
</Fragment>
`;

exports[`Dashboard Researcher IDs test Testing unauth internal links 2`] = `
<Fragment>
  <ExternalLink
    href="http://www.researcherid.com/rid/A-1137-2007"
    id="researcher"
    openInNewIcon={false}
  >
    <WithStyles(ForwardRef(Tooltip))
      title="Your Researcher (ISI) ID is A-1137-2007 - Click to review"
    >
      <div
        className="fez-icon researcher error"
        style={
          Object {
            "borderRadius": 32,
            "height": 32,
            "width": 32,
          }
        }
      />
    </WithStyles(ForwardRef(Tooltip))>
  </ExternalLink>
</Fragment>
`;

exports[`Dashboard Researcher IDs test Testing unauth internal links 3`] = `
<Fragment>
  <ExternalLink
    href="http://www.scopus.com/authid/detail.url?authorId=35478294000"
    id="scopus"
    openInNewIcon={false}
  >
    <WithStyles(ForwardRef(Tooltip))
      title="Your Scopus ID is 35478294000 - Click to review"
    >
      <div
        className="fez-icon scopus error"
        style={
          Object {
            "borderRadius": 32,
            "height": 32,
            "width": 32,
          }
        }
      />
    </WithStyles(ForwardRef(Tooltip))>
  </ExternalLink>
</Fragment>
`;

exports[`Dashboard Researcher IDs test Testing unauth internal links 4`] = `
<Fragment>
  <ExternalLink
    href="https://scholar.google.com.au/citations?user=kUemDfMAAAAJ"
    id="google_scholar"
    openInNewIcon={false}
  >
    <WithStyles(ForwardRef(Tooltip))
      title="Your Google Scholar ID is kUemDfMAAAAJ - Click to review"
    >
      <div
        className="fez-icon google_scholar error"
        style={
          Object {
            "borderRadius": 32,
            "height": 32,
            "width": 32,
          }
        }
      />
    </WithStyles(ForwardRef(Tooltip))>
  </ExternalLink>
</Fragment>
`;

exports[`Dashboard Researcher IDs test Testing unauth internal links 5`] = `""`;

exports[`Dashboard Researcher IDs test Testing unauth internal links 6`] = `
<a
  id="orcid"
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex="0"
  title="You are not linked to ORCID - Click for more information"
>
  <div
    className="fez-icon orcid dashboard error"
    title="You are not linked to ORCID - Click for more information"
  />
</a>
`;

exports[`Dashboard Researcher IDs test should have a style generator 1`] = `
Object {
  "orcidLink": Object {
    "color": "#fff",
  },
  "orcidSyncBadge": Object {
    "& button": Object {
      "padding": 0,
      "position": "relative",
      "top": -15,
    },
    "& svg": Object {
      "color": "#fff",
    },
  },
  "researcherIDlink": Object {
    "& .error": Object {
      "-webkit-filter": "grayscale(1)",
      "filter": "grayscale(1)",
    },
    "&:hover": Object {
      "cursor": "pointer",
    },
  },
}
`;

exports[`Dashboard Researcher IDs test should show orcid sync UI 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-align-items-xs-center"
    style="margin-top: 12px;"
  >
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <a
        class="makeStyles-externalLink-1"
        data-testid="publons-link"
        href="http://guides.library.uq.edu.au/for-researchers/researcher-identifier/publons"
        id="publons-link"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
      >
        <div
          class="fez-icon publons error"
          style="width: 32px; height: 32px; border-radius: 32px;"
          title="You are not linked to Publons - Click for more information"
        />
      </a>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <a
        class="makeStyles-externalLink-1"
        data-testid="researcher-link"
        href="http://www.researcherid.com/rid/A-1137-2007"
        id="researcher-link"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
      >
        <div
          class="fez-icon researcher ok"
          style="width: 32px; height: 32px; border-radius: 32px;"
          title="Your Researcher (ISI) ID is A-1137-2007 - Click to review"
        />
      </a>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <a
        class="makeStyles-externalLink-1"
        data-testid="scopus-link"
        href="http://www.scopus.com/authid/detail.url?authorId=35478294000"
        id="scopus-link"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
      >
        <div
          class="fez-icon scopus error"
          style="width: 32px; height: 32px; border-radius: 32px;"
          title="Your Scopus ID is 35478294000 - Click to review"
        />
      </a>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <a
        class="makeStyles-externalLink-1"
        data-testid="google_scholar-link"
        href="https://scholar.google.com.au/citations?user=kUemDfMAAAAJ"
        id="google_scholar-link"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
      >
        <div
          class="fez-icon google_scholar error"
          style="width: 32px; height: 32px; border-radius: 32px;"
          title="Your Google Scholar ID is kUemDfMAAAAJ - Click to review"
        />
      </a>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <a
        class="makeStyles-externalLink-1"
        data-testid="orcid-link"
        href="https://orcid.org/0000-0001-1111-1111"
        id="orcid-link"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
      >
        <div
          class="fez-icon orcid ok"
          style="width: 32px; height: 32px; border-radius: 32px;"
          title="Your ORCID ID is 0000-0001-1111-1111 - Click to review"
        />
      </a>
      <span>
        <button
          aria-label="Information about uploading your eSpace works to ORCID"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
          data-testid="help-icon-orcid"
          id="help-icon-orcid"
          tabindex="0"
          title="Information about uploading your eSpace works to ORCID"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              class="MuiSvgIcon-root makeStyles-helpIcon-3 MuiSvgIcon-fontSizeSmall"
              focusable="false"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z"
              />
              <title>
                Information about uploading your eSpace works to ORCID
              </title>
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </span>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <a
        aria-label="Click to visit your ORCID profile"
        href="https://orcid.org/0000-0001-1111-1111"
        id="orcid"
        tabindex="0"
        target="_blank"
        title="Click to visit your ORCID profile"
      >
        <span
          class="MuiTypography-root MuiTypography-caption"
        >
           orcid.org/0000-0001-1111-1111
        </span>
      </a>
    </div>
  </div>
</DocumentFragment>
`;
